Crooks and Hammers